--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,12 @@ img {
   flex-wrap: wrap;
 }
 
-.site-navigation li {
+.site-navigation-item {
   margin-right: 45px;
+}
+
+.site-navigation-item a {
+  position: relative;
 }
 
 .site-navigation-current a:not([href]) {
@@ -199,7 +203,7 @@ img {
 .user-navigation {
   max-width: 115px;
   padding-top: 75px;
-  margin-right: 45px;
+
   position: relative;
 }
 
@@ -238,6 +242,17 @@ img {
 .cart-link:active {
   color: var(--basic-black);
   opacity: 0.3;
+}
+
+.site-navigation a:active::after,
+.cart-link:active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -24px;
+  left:0;
+  background: var(--light-red);
 }
 
 /*Slider*/
@@ -316,7 +331,7 @@ img {
 }
 
 .slider-box-one .slider-box-header {
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 }
 
 .slider-box-one .slide-description {
@@ -358,6 +373,7 @@ img {
 }
 
 .slider-box-right img {
+  padding-right: 2px;
   height: 100%;
   width: auto;
 }
@@ -369,16 +385,22 @@ img {
   padding: 0;
   padding: 80px 0;
   list-style: none;
+  width: 1200px;
   display: flex;
   justify-content: space-between;
+
+
 }
 
 .services-item {
-  width: 30%;
+  width: auto;
+  flex-grow: 1;
 }
 
 .services-item img {
-  margin-bottom: 25px;
+  width: 300px;
+  height: 146px;
+  margin-bottom: 19px;
 }
 
 .services-item-heading {
@@ -439,6 +461,7 @@ img {
   justify-content: space-between;
   padding-bottom: 73px;
   border-bottom: 2px solid var(--light-gray);
+  line-height: 25px;
 }
 
 /*Left box*/
@@ -458,28 +481,28 @@ img {
 
 .about-description {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 38px;
 }
 
 .about-info {
   font-weight: bold;
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 23px;
+  margin-bottom: 21px;
 }
 
 .about-list {
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-left: 32px;
+  padding-left: 36px;
 }
 
 .about-item {
   display: flex;
   position: relative;
   align-items: center;
-  margin-bottom: 45px;
+  margin-bottom: 25px;
 }
 
 .about-item:last-of-type {
@@ -491,7 +514,7 @@ img {
   position: absolute;
   width: 25px;
   height: 2px;
-  left: -32px;
+  left: -36px;
   background-color: var(--light-red);
 }
 
@@ -499,6 +522,9 @@ img {
 
 .about-box-right {
   padding-top: 39px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .about-box-right img {
@@ -525,7 +551,7 @@ img {
 }
 
 .about-table-row-one td {
-  padding-right: 22px;
+
 }
 
 .about-table-row-one sup {
@@ -779,7 +805,8 @@ img {
   opacity: 0.4;
 }
 
-.filter-input-checkbox:hover + label::before {
+.filter-input-checkbox:hover + label::before,
+.filter-input-checkbox:focus + label::before {
   opacity: 1;
 }
 
@@ -811,7 +838,8 @@ img {
   opacity: 0.4;
 }
 
-.filter-input-radio:hover + label::before {
+.filter-input-radio:hover + label::before,
+.filter-input-radio:focus + label::before {
   opacity: 1;
 }
 
@@ -883,7 +911,8 @@ img {
   margin-right: 0;
 }
 
-.sorting-item:hover {
+.sorting-item:hover,
+.sorting-item:focus {
   opacity: 0.6;
 }
 
@@ -928,7 +957,9 @@ img {
 }
 
 .sorting-range-item-one:hover::before,
-.sorting-range-item-two:hover::before {
+.sorting-range-item-two:hover::before,
+.sorting-range-item-one:focus::before,
+.sorting-range-item-two:focus::before {
   opacity: 0.3;
 }
 
@@ -973,7 +1004,8 @@ img {
   top: -40px;
 }
 
-.catalog-item:hover::before {
+.catalog-item:hover::before,
+.catalog-item:focus::before {
   opacity: 1;
 }
 
@@ -996,7 +1028,8 @@ img {
   text-align: center;
 }
 
-.catalog-item-title:hover {
+.catalog-item-title:hover,
+.catalog-item-title:focus {
   color: var(--light-red);
 }
 
@@ -1026,13 +1059,10 @@ img {
   display: none;
 }
 
-.catalog-item:hover .catalog-wrap {
+.catalog-item:hover .catalog-wrap,
+.catalog-item:focus .catalog-wrap {
   display: block;
 }
-
-/*.catalog-item-hovered {
-  display: block;
-} */
 
 /*Button-price*/
 
@@ -1251,6 +1281,8 @@ img {
   background-color: var(--basic-white);
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
   padding: 63px 100px 84px 100px;
+  z-index: 22;
+  display: none;
 }
 
 .modal-feedback-title {
@@ -1311,7 +1343,9 @@ img {
 }
 
 .modal-item input:hover,
-.modal-message textarea:hover {
+.modal-message textarea:hover
+.modal-item input:focus,
+.modal-message textarea:focus {
   border-color: var(--input-hover-gray);
 }
 
