--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ img {
   text-transform: uppercase;
   background-color: var(--light-red);
   border: none;
+  border-radius: 3px;
   padding-top: 17px;
   padding-bottom: 15px;
   cursor: pointer;
@@ -488,7 +489,7 @@ img {
   font-weight: bold;
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 21px;
+  margin-bottom: 23px;
 }
 
 .about-list {
@@ -496,13 +497,14 @@ img {
   margin: 0;
   padding: 0;
   padding-left: 36px;
+  line-height: 24px;
 }
 
 .about-item {
   display: flex;
   position: relative;
   align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 }
 
 .about-item:last-of-type {
@@ -531,7 +533,7 @@ img {
   width: 360px;
   height: 208px;
   margin: 0;
-  margin-bottom: 37px;
+  margin-bottom: 27px;
 }
 
 .about-data {
@@ -540,7 +542,8 @@ img {
   color: var(--basic-black);
   text-align: center;
   margin: 0;
-  margin-bottom: 31px;
+  margin-bottom: 19px;
+
 }
 
 .about-table-row-one {
@@ -551,20 +554,28 @@ img {
 }
 
 .about-table-row-one td {
-
+  padding-right: 8px;
+  padding-bottom: 9px;
 }
+
 
 .about-table-row-one sup {
   font-size: 26px;
   line-height: 40px;
 }
+
+.about-table-row-two {
+  line-height: 18px;
+}
+
+
 /*Partners*/
 
 .partners-list {
   list-style: none;
-  margin: 0;
+  margin: 0 -20px;
   padding: 0;
-  padding-bottom: 45px;
+  padding-bottom: 44px;
   padding-top: 45px;
   display: flex;
   justify-content: space-around;
@@ -575,8 +586,13 @@ img {
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
+
   width: 25%;
+}
+
+.partners-link {
+  display: flex;
+  align-items: center;
 }
 
 .partners-item::after {
@@ -618,7 +634,7 @@ img {
   background-color: var(--light-gray);
   min-height: 241px;
   margin-top: 0;
-  padding-top: 87px;
+  padding-top: 78px;
 }
 
 .page-title {
@@ -630,7 +646,7 @@ img {
 }
 
 .catalog {
-  padding-top: 55px;
+  padding-top: 54px;
   margin-left: 140px;
 }
 
@@ -670,7 +686,7 @@ img {
 .range-controls {
   position: relative;
   height: 80px;
-  padding-top: 39px;
+  padding-top: 38px;
   padding-right: 20px;
   padding-left: 20px;
   margin-bottom: 15px;
@@ -729,7 +745,7 @@ img {
 .price-controls input {
   width: 80px;
   padding: 8px;
-  margin-left: 12px;
+  margin-left: 8px;
   text-align: center;
   color: #283136;
   border: none;
@@ -742,16 +758,16 @@ img {
 /*Filters option*/
 
 .filter fieldset:first-child {
-  margin-bottom: 54px;
+  margin-bottom: 56px;
 }
 
 .filter fieldset:nth-child(3) {
-  margin-bottom: 48px;
-  margin-top: 43px;
+  margin-bottom: 51px;
+  margin-top: 46px;
 }
 
 .filter-grids .filter-type {
-  margin-bottom: 13px;
+  margin-bottom: 15px;
 }
 
 .filter-options .filter-type {
@@ -875,7 +891,7 @@ img {
 .catalog-sorting {
   display: flex;
   align-items: center;
-  margin-bottom: 55px;
+  margin-bottom: 46px;
 }
 
 .catalog-sorting-title {
@@ -928,6 +944,7 @@ img {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  padding-left: 49px;
 }
 
 .sorting-range-item-one,
@@ -976,8 +993,9 @@ img {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
+  padding-left: 1px;
   margin: 0;
-  margin-bottom: 55px;
+  margin-bottom: 22px;
   list-style: none;
 }
 
@@ -990,7 +1008,7 @@ img {
   min-height: 578px;
   margin-top: 40px;
   margin-right: 42px;
-  margin-bottom: 72px;
+  margin-bottom: 33px;
 }
 
 .catalog-item::before {
@@ -1044,14 +1062,14 @@ img {
   text-align: center;
   margin: 0;
   margin-top: 12px;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 .catalog-wrap {
   position: absolute;
   width: 100%;
   height: 231px;
-  padding: 26px 53px 44px 52px;
+  padding: 29px 53px 44px 53px;
   text-align: center;
   background-color: var(--light-gray);
   left: 0;
@@ -1079,10 +1097,11 @@ img {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-bottom: -20px;
 }
 
 .pagination-item {
-  margin-right: 11px;
+  margin-right: 12px;
 }
 
 .pagination-item a {
@@ -1094,6 +1113,10 @@ img {
   font-weight: 500;
   line-height: 18px;
   text-transform: uppercase;
+}
+
+.pagination-item-next a {
+  padding: 17px 77px 15px 78px;
 }
 
 .pagination-item a:hover,
@@ -1136,10 +1159,12 @@ img {
 .footer-map {
   background-color: var(--map-gray);
   width: 100%;
+  height: 416px;
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
+  border: none;
 }
 
 .footer-contacts-wrapper {
@@ -1148,8 +1173,8 @@ img {
 
 .footer-contacts-box {
   background-color: var(--basic-white);
-  padding: 48px 50px;
-  max-width: 319px;
+  padding: 49px 50px;
+  min-width: 320px;
   position: absolute;
   left: 0;
 }
@@ -1163,8 +1188,13 @@ img {
   margin-bottom: 23px;
 }
 
-.footer-contacts-address {
-  margin-top: 0;
+.footer-contacts-address,
+.footer-contacts-phone {
+  margin: 0;
+  margin-bottom: 18px;
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--special-gray);
 }
 
 .footer-contacts-phone {
@@ -1176,20 +1206,14 @@ img {
   width: 100%;
 }
 
-.footer-address,
-.footer-phone {
-  font-size: 16px;
-  line-height: 18px;
-  color: var(--special-gray);
-}
-
 /*Footer Social*/
 
 .footer-social {
   position: relative;
   display: flex;
   min-height: 217px;
-  justify-content: space-around;
+  justify-content: center;
+  padding-left: 203px;
 }
 
 .footer-social-box {
@@ -1223,9 +1247,9 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   width: 261px;
-  margin: 0 auto;
+  margin: 0;
+  margin-left: 20px;
   padding: 0;
 }
 
@@ -1280,7 +1304,7 @@ img {
   line-height: 18px;
   background-color: var(--basic-white);
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
-  padding: 63px 100px 84px 100px;
+  padding: 63px 100px 83px 100px;
   z-index: 22;
   display: none;
 }
@@ -1366,14 +1390,14 @@ img {
 
 .button-feedback {
   display: inline-block;
-  padding: 17px 83px 15px 83px;
+  padding: 17px 85px 15px 83px;
 }
 
 .button-close {
   display: inline-block;
   position: absolute;
   top: 78px;
-  right: 100px;
+  right: 90px;
   width: 21px;
   height: 21px;
   border: none;
