--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
   min-width: 960px;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   font-style: normal;
   line-height: 24px;
@@ -1159,7 +1159,7 @@ img {
 .footer-map {
   background-color: var(--map-gray);
   width: 100%;
-  height: 416px;
+  height: 100%;
   position: absolute;
   left: 0;
   top: 0;
