--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,8 @@ img {
   opacity: 0.3;
 }
 
-.site-navigation a:active::after,
-.cart-link:active::after {
+.site-navigation a.active::after,
+.cart-link.active::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -362,6 +362,7 @@ img {
   padding-left: 54px;
   padding-right: 54px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 /*Right box*/
@@ -1068,7 +1069,7 @@ img {
 .catalog-wrap {
   position: absolute;
   width: 100%;
-  height: 231px;
+  min-height: 231px;
   padding: 29px 53px 44px 53px;
   text-align: center;
   background-color: var(--light-gray);
@@ -1213,31 +1214,36 @@ img {
   display: flex;
   min-height: 217px;
   justify-content: center;
-  padding-left: 203px;
 }
 
 .footer-social-box {
   order: 1;
   padding-top: 75px;
+  padding-left: 400px;
 }
 
-.footer-social-icons {
-  padding: 0;
-  margin: 0;
-  padding-top: 68px;
-}
-
-.footer-social-box strong {
+.social-be-friends {
   display: inline-block;
   font-weight: bold;
   font-size: 36px;
   line-height: 36px;
   color: var(--basic-black);
   margin-bottom: 10px;
+  text-overflow: ellipsis;
+
 }
 
-.footer-social-box p {
+.sale-for-friends {
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--footer-gray);
   margin: 0;
+}
+
+.footer-social-icons {
+  padding: 0;
+  margin: 0;
+  padding-top: 68px;
 }
 
 .footer-social-list {
@@ -1251,12 +1257,6 @@ img {
   margin: 0;
   margin-left: 20px;
   padding: 0;
-}
-
-.footer-social p {
-  font-size: 16px;
-  line-height: 22px;
-  color: var(--footer-gray);
 }
 
 /* Footer Social buttons */
