--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ img {
 /* Container */
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -251,9 +251,13 @@ img {
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: -24px;
+  bottom: -21px;
   left:0;
   background: var(--light-red);
+}
+
+.cart-link.active::after {
+  bottom: -3px;
 }
 
 /*Slider*/
@@ -338,7 +342,7 @@ img {
 .slider-box-one .slide-description {
   margin: 0;
   padding: 0;
-  margin-bottom: 38px;
+  margin-bottom: 39px;
 }
 
 .slider-box-two .slider-box-header,
@@ -387,7 +391,6 @@ img {
   padding: 0;
   padding: 80px 0;
   list-style: none;
-  width: 1200px;
   display: flex;
   justify-content: space-between;
 
@@ -395,8 +398,7 @@ img {
 }
 
 .services-item {
-  width: auto;
-  flex-grow: 1;
+  width: 31%;
 }
 
 .services-item img {
@@ -418,16 +420,21 @@ img {
 .services-description {
   margin: 0;
   padding: 0;
-  margin-bottom: 32px;
+  margin-bottom: 31px;
 }
 
 .services-list {
   border-bottom: 2px solid var(--light-gray);
 }
 
+.services-list:first-child {
+  margin-right: 4px;
+}
+
 .services-button {
-  padding: 17px 40px 15px 39px;
+  padding: 18px 40px 15px 40px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .services-button-apps {
@@ -469,7 +476,7 @@ img {
 /*Left box*/
 
 .about-box-left {
-  padding-top: 73px;
+  padding-top: 74px;
 }
 
 .about-title {
@@ -483,7 +490,7 @@ img {
 
 .about-description {
   margin: 0;
-  margin-bottom: 38px;
+  margin-bottom: 39px;
 }
 
 .about-info {
@@ -544,7 +551,12 @@ img {
   text-align: center;
   margin: 0;
   margin-bottom: 19px;
+  margin-left: 3px;
 
+}
+
+.about-data-table {
+  width: 100%;
 }
 
 .about-table-row-one {
@@ -555,8 +567,9 @@ img {
 }
 
 .about-table-row-one td {
-  padding-right: 8px;
+  padding-right: 10px;
   padding-bottom: 9px;
+  padding-left: 0px;
 }
 
 
@@ -647,7 +660,7 @@ img {
 }
 
 .catalog {
-  padding-top: 54px;
+  padding-top: 44px;
   margin-left: 140px;
 }
 
@@ -868,6 +881,7 @@ img {
 
 .filter-button {
   display: inline-block;
+  vertical-align: middle;
   color: var(--basic-black);
   background-color: var(--light-gray);
   padding-left: 88px;
@@ -892,7 +906,7 @@ img {
 .catalog-sorting {
   display: flex;
   align-items: center;
-  margin-bottom: 46px;
+  margin-bottom: 34px;
 }
 
 .catalog-sorting-title {
@@ -951,6 +965,10 @@ img {
 .sorting-range-item-one,
 .sorting-range-item-two {
   position: relative;
+  width: 11px;
+  height: 10px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .sorting-range-item-one::before {
@@ -969,8 +987,9 @@ img {
   width: 11px;
   height: 10px;
   background-image: url("../img/icon-up-dir.png");
-  left: 28px;
+  left: 0px;
   top: -6px;
+  margin-left:18px;
   opacity: 0.1;
 }
 
@@ -996,7 +1015,7 @@ img {
   padding: 0;
   padding-left: 1px;
   margin: 0;
-  margin-bottom: 22px;
+  margin-bottom: 19px;
   list-style: none;
 }
 
@@ -1063,14 +1082,14 @@ img {
   text-align: center;
   margin: 0;
   margin-top: 12px;
-  margin-bottom: 33px;
+  margin-bottom: 32px;
 }
 
 .catalog-wrap {
   position: absolute;
   width: 100%;
   min-height: 231px;
-  padding: 29px 53px 44px 53px;
+  padding: 29px 53px 34px 53px;
   text-align: center;
   background-color: var(--light-gray);
   left: 0;
@@ -1088,6 +1107,7 @@ img {
 .button-price {
   display: inline-block;
   padding: 17px 72px 15px 72px;
+  vertical-align: middle;
 }
 
 /* Pagination */
@@ -1174,7 +1194,7 @@ img {
 
 .footer-contacts-box {
   background-color: var(--basic-white);
-  padding: 49px 50px;
+  padding: 51px 50px;
   min-width: 320px;
   position: absolute;
   left: 0;
@@ -1204,7 +1224,9 @@ img {
 }
 
 .footer-button {
+  display: inline-block;
   width: 100%;
+  vertical-align: middle;
 }
 
 /*Footer Social*/
@@ -1218,19 +1240,21 @@ img {
 
 .footer-social-box {
   order: 1;
-  padding-top: 75px;
-  padding-left: 400px;
+  position: absolute;
+  width: 100%;
+  padding-top: 76px;
+  padding-left: 420px;
+
 }
 
 .social-be-friends {
-  display: inline-block;
   font-weight: bold;
   font-size: 36px;
   line-height: 36px;
   color: var(--basic-black);
-  margin-bottom: 10px;
-  text-overflow: ellipsis;
-
+  margin-bottom: 9px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .sale-for-friends {
@@ -1391,6 +1415,7 @@ img {
 .button-feedback {
   display: inline-block;
   padding: 17px 85px 15px 83px;
+  vertical-align: middle;
 }
 
 .button-close {
@@ -1406,6 +1431,7 @@ img {
   cursor: pointer;
   opacity: 0.3;
   outline: none;
+  vertical-align: middle;
 }
 
 .button-close:hover,
