--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@
   align-content: start;
 }
 
+.page-body-fixed {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -1335,6 +1339,11 @@ img {
 
 .modal-feedback-show {
   display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-feedback-error {
+  animation: shake 0.6s;
 }
 
 .modal-feedback-title {
@@ -1445,5 +1454,47 @@ img {
 
 .button-close:active {
   opacity: 0.1;
+}
+
+/* Animations */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
